SmtpJob: Fix crash in startLoginJob

- The user tries to connect to an smtp server, the password dialog is shown
  starting a nested eventloop with exec()
- the connection is lost, the smtpjob is killed (due to connect() in startSmtpJob)
- the dialog::exec returns, and the code tries to setError(KilledJobError)
  on an already killed job which leads to a crash

fix the issue by using QDialog::open() to make the code async.

BUG: 421930

https://invent.kde.org/pim/kmailtransport/-/merge_requests/4
(cherry picked from commit 14894befa0274e124cdde611dfb7ada8b1131b07)